--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,17 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="mulunguApp">
+  <body ng-app="ArrebolApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <div class="container">
+      <div class="row">
+        <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-2 col-md-offset-5">
+          <img src="images/logo.svg" alt="Arrebol" class="logo"/>
+        </div>
+      </div>
       <div ng-view=""></div>
     </div>
 
