--- a/app/index.html
+++ b/app/index.html
@@ -18,17 +18,21 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-2 col-md-offset-5">
-          <img src="images/logo.svg" alt="Arrebol" class="logo"/>
+    <div class="page-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
+            <img src="images/logo.svg" alt="Arrebol" class="logo"/>
+          </div>
         </div>
+        <div ng-view=""></div>
       </div>
-      <div ng-view=""></div>
     </div>
+    <footer>
+      Arrebol &copy; Powered by <a href="http://www.fogbowcloud.org/">Fogbow</a>
+    </footer>
 
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
@@ -38,6 +42,7 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+    -->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -57,6 +62,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/tasks.js"></script>
+        <script src="scripts/services/jobs.js"></script>
         <!-- endbuild -->
 </body>
 </html>
