--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,9 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
-            <img src="images/logo.svg" alt="Arrebol" class="logo"/>
+            <a href="#/">
+              <img src="images/logo.svg" alt="Arrebol" class="logo"/>
+            </a>
           </div>
         </div>
         <div ng-view=""></div>
