--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-md5/angular-md5.js"></script>
+    <script src="bower_components/jsrsasign/jsrsasign-latest-all-min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -65,6 +67,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/tasks.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/jobs.js"></script>
         <!-- endbuild -->
 </body>
