Added feature to stop jobs

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/tasks.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/services/hex2a.js"></script>
         <script src="scripts/services/jobs.js"></script>
         <!-- endbuild -->
 </body>
