--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -59,6 +60,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-md5/angular-md5.js"></script>
     <script src="bower_components/jsrsasign/jsrsasign-latest-all-min.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -70,6 +72,7 @@
         <script src="scripts/controllers/tasks.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/services/hex2a.js"></script>
+        <script src="scripts/services/arrebolapi.js"></script>
         <script src="scripts/services/jobs.js"></script>
         <!-- endbuild -->
 </body>
