--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
           <a href="/">
-            <img src="images/logo.svg" alt="Arrebol" class="logo" />
+            <img src="images/logo3.png" alt="Arrebol" class="logo" />
           </a>
         </div>
       </div>
